--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>W3.CSS Template</title>
+<title>Design Portfolio</title>
+<link rel="shortcut icon" href="logos/my_logo.png" type="image/x-icon">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -43,28 +44,29 @@ img {margin-bottom: -7px}
 </div>
 
 <!-- Photo Grid -->
+<br><br>
 <div class="w3-row" id="myGrid" style="margin-bottom:128px">
   <div class="w3-third">
-    <img src="yt-banner.png" style="width:100%">
-    <img src="ideathon-poster.png" style="width:100%">
-    <img src="css-img.png" style="width:100%">
-    <img src="stocks-img.png" style="width:100%">
-    <img src="linkedin-banner.png" style="width:300%">
+    <img src="images/yt-banner.png" style="width:100%">
+    <img src="images/ideathon-poster.png" style="width:100%">
+    <img src="images/css-img.png" style="width:100%">
+    <img src="images/stocks-img.png" style="width:100%">
+    <img src="images/linkedin-banner.png" style="width:300%">
   </div>
 
   <div class="w3-third">
-    <img src="msc-intro.png" style="width:100%">
-    <img src="ronaldo-info.png" style="width:100%">
-    <img src="blog-logo.png" style="width:100%">
-    <img src="yt-poster.png" style="width:100%">
+    <img src="images/msc-intro.png" style="width:100%">
+    <img src="images/ronaldo-info.png" style="width:100%">
+    <img src="images/blog-logo.png" style="width:100%">
+    <img src="images/yt-poster.png" style="width:100%">
     
   </div>
 
   <div class="w3-third">
-    <img src="chess-intro.png" style="width:100%">
-    <img src="yt-thumbnail.png" style="width:100%">
-    <img src="stocks-img1.png" style="width:100%">
-    <img src="ronaldo-poster.png" style="width:100%">
+    <img src="images/chess-intro.png" style="width:100%">
+    <img src="images/yt-thumbnail.png" style="width:100%">
+    <img src="images/stocks-img1.png" style="width:100%">
+    <img src="images/ronaldo-poster.png" style="width:100%">
   </div>
 </div>
 
